[gd_scene load_steps=8 format=3 uid="uid://od12lyvhvsdq"]

[ext_resource type="Script" uid="uid://cfs8r5xutw488" path="res://Scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Theme" uid="uid://kkeu01cr24x0" path="res://assets/GUI/theme_base.tres" id="1_rtw2f"]
[ext_resource type="PackedScene" uid="uid://cp7m752g3qy5g" path="res://entities/User Interface/button_exit.tscn" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://crp5nmo3u77rt" path="res://assets/grades/grade_g3.png" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://cxso6xsaebkvc" path="res://assets/CupBase.png" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://brpqfyt1iyehj" path="res://assets/CupNettles.png" id="5_rtw2f"]
[ext_resource type="Texture2D" uid="uid://c733b55j5y6lb" path="res://assets/gg_table.png" id="7_oa1go"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rtw2f")
script = ExtResource("1_ekxnf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rtw2f")

[node name="MainButtons" type="Control" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/MainButtons"]
custom_minimum_size = Vector2(100, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -150.0
offset_right = 50.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="logo" type="TextureRect" parent="CanvasLayer/CenterContainer/MainButtons/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("3_oa1go")
expand_mode = 1

[node name="title" type="Label" parent="CanvasLayer/CenterContainer/MainButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Goblin Gastronomy"
horizontal_alignment = 1

[node name="buttonStart" type="Button" parent="CanvasLayer/CenterContainer/MainButtons/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="buttonExit" parent="CanvasLayer/CenterContainer/MainButtons/VBoxContainer" instance=ExtResource("3_bqqt6")]
layout_mode = 2

[node name="LevelSelect" type="Control" parent="CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2

[node name="selectBG" type="Panel" parent="CanvasLayer/CenterContainer/LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.5
offset_top = -207.0
offset_right = 297.5
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/CenterContainer/LevelSelect/selectBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = -187.0
offset_right = 271.5
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="levelButton1" type="Button" parent="CanvasLayer/CenterContainer/LevelSelect/selectBG/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "0. Tutorial"
icon = ExtResource("4_8ln24")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="levelButton2" type="Button" parent="CanvasLayer/CenterContainer/LevelSelect/selectBG/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "1. Salad"
icon = ExtResource("5_rtw2f")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="levelClose" type="Button" parent="CanvasLayer/CenterContainer/LevelSelect/selectBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -32.0
offset_right = 32.5
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.5
offset_top = -190.5
offset_right = 203.5
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oa1go")

[connection signal="pressed" from="CanvasLayer/CenterContainer/MainButtons/VBoxContainer/buttonStart" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/LevelSelect/selectBG/GridContainer/levelButton1" to="." method="_on_level_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/LevelSelect/selectBG/GridContainer/levelButton2" to="." method="_on_level_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/LevelSelect/selectBG/levelClose" to="." method="_on_level_close_pressed"]
